test/visibility/rename/renameConflictInList.good
renameConflictInList.chpl:8: error: symbol 'baz' multiply defined
